--- a/Smart_City/dashboard/templates/index.html
+++ b/Smart_City/dashboard/templates/index.html
@@ -47,7 +47,7 @@
     <div class="col-6 text-center">
         <div class="center" style="margin-top: 30px;">
             <ul class="list-group"  style="margin-top: 30px;">
-                <li class="list-group-item" style="border: none">{% for current_data in current_data_sensor%} Naam: <b>{{current_data.cardID}}</b>,  Tijd ingecheckt: <b>{{current_data.created_at}}</b> Geautoriseerd: <b>{{current_data.authorised}}</b></br>{%endfor%}</li>
+                <li id="sensorValues" class="list-group-item" style="border: none">{% for current_data in current_data_sensor%} Naam: <b>{{current_data.cardID}}</b>,  Tijd ingecheckt: <b>{{current_data.created_at}}</b> Geautoriseerd: <b>{{current_data.authorised}}</b></br>{%endfor%}</li>
             </ul>
         </div>
     </div>
@@ -107,4 +107,25 @@ hr
     <!--Grafiek-->
 
 </body>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous">
+</script>
+<script>
+    //check of javascript is ready to start
+    $(document).ready(function() {
+        setInterval(() => { // set interval each second
+            $.get("/RFID", (sensors) => { //get api /sensor
+                let count = 0; // empty_or_full_value.count
+                for(let index in sensors) { //loop
+                    if(sensors[index].sensorValue === 1) count++; //is sensorValue = 1 ++
+                }
+                let output = `${count}/${sensors.length}`; //html format
+                $("#sensorValues").html(output); //write html
+
+            });
+        }, 10000);
+    });
+</script>
 </html>
