--- a/Smart_City/dashboard/templates/index.html
+++ b/Smart_City/dashboard/templates/index.html
@@ -82,9 +82,8 @@
             <button class="btn btn-warning text-white" type="submit" style="padding: 10px 20px; font-size: 20px; border-radius: 10px; width:120px; margin-top: 30px;"><b>Zoeken</b></button>
         </form>
     </div>
-
+{{data_last_week}}
     <hr>
-
 <!--Grafieken-->
 <div class="row">
     <div class="col-6 text-center">
