--- a/Smart_City/dashboard/templates/index.html
+++ b/Smart_City/dashboard/templates/index.html
@@ -44,6 +44,9 @@
         </div>
     </div>
     <div class="col-6 text-center">
+        <div class="center" style="margin-top: 30px;" align="center">
+            <h4><strong>Aantal gebruikers van parkeergarage:</strong></h4>
+        </div>
     </div>
 </div>
 
@@ -63,7 +66,10 @@
         </div>
     </div>
     <div class="col-6 text-center">
-        <div style="margin-right: 100px;" align="left">
+        <div style="margin-right: 100px;" align="center">
+            <br>
+           <h1><b>{{alldata_sensor.count}}</b></h1>
+        </div>
         </div>
     </div>
 </div>
@@ -158,7 +164,7 @@
 
                         var data = {
                             // Label opties
-                            labels: ["Aantal ongeautoriseerde gebruikers die geprobeerd hebben binnen te komen"],
+                            labels: ["Aantal ingecheckte gebruikers op geselecteerde datum"],
 
                             // Positie
                             position: 'top',
